gcc/testsuite/rust/compile/extern_func_with_body.rs
extern "C" {
    fn myfun0(a:i32,...) {}
    // { dg-error "cannot have a body" "" { target *-*-* } .-1 }
}

